--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           <p class="pb-3">But my creative journey doesn't stop there. As a portrait artist, I love capturing the essence of people and pets through custom artwork. And as a UI/UX designer, I'm dedicated to designing intuitive and visually stunning interfaces that delight users.</p>
         </div>
         <div class="col-md-6 text-center">
-          <img src="/portfolio/images/vasanth2.jpeg" alt="vasanth" class="img-fluid w-75">
+          <img src="./images/vasanth2.jpeg" alt="vasanth" class="img-fluid w-75">
         </div>
       </div>
     </div>
@@ -81,7 +81,7 @@
     <div class="row">
       <div class="col-md-3">
         <div class="card  text-center">
-          <img src="/portfolio/images/html.jpg.jpeg" class="card-img-top w-25 m-auto pt-4" alt="html">
+          <img src="./images/html.jpg.jpeg" class="card-img-top w-25 m-auto pt-4" alt="html">
           <div class="card-body">
             <h5 class="card-title">HTML</h5>
             <p class="card-text">, I've got a good grasp on HTML basics. I know my way around common tags like headings, paragraphs, and links. But I'm aware I need to level up my skills. I'm looking to dive deeper into semantic HTML, accessibility, and microformats. I'll keep practicing and building projects to get more hands-on experience. And, of course, I'll stay updated on the latest HTML trends and best </p>
@@ -92,7 +92,7 @@
       </div>
       <div class="col-md-3">
         <div class="card  text-center">
-          <img src="/portfolio/images/css.jpg.jpeg" class="card-img-top w-25 m-auto pt-4" alt="css">
+          <img src="./images/css.jpg.jpeg" class="card-img-top w-25 m-auto pt-4" alt="css">
           <div class="card-body">
             <h5 class="card-title">CSS</h5>
             <p class="card-text"> I've got a good grasp on CSS basics. I know my way around common selectors like classes, IDs, and tags. But I'm aware I need to level up my skills. I'm looking to dive deeper into CSS preprocessors, CSS grids, and CSS animations. I'll keep practicing and building projects to get more hands-on experience. And, of course, I'll stay updated on the latest CSS trends and best practices.</p>
@@ -114,7 +114,7 @@
       </div>
       <div class="col-md-3">
         <div class="card text-center">
-          <img src="/portfolio/images/art.jpg.jpeg" class="card-img-top w-25 m-auto pt-4" alt="art">
+          <img src="./images/art.jpg.jpeg" class="card-img-top w-25 m-auto pt-4" alt="art">
           <div class="card-body">
             <h5 class="card-title">ARTIST</h5>
             <p class="card-text">You're a talented portrait artist with a keen eye for detail and a passion for capturing the essence of your subjects. With a strong foundation in traditional art techniques, you skillfully bring personalities to life through your artwork. Your portraits are not only visually stunning but also emotionally resonant, conveying the unique spirit and character of each individual.</p>
